# agentgateway

./: .dockerignore  Cargo.toml  SIG_KEY.md  SPEC.md  Tiltfile  go.mod
.github/workflows/: release.yml
aauth-rust/: CONFIGURATION.md  IMPLEMENTATION_PLAN.md  README.md  RUNNING_TESTS.md  TESTING.md  TESTS_VERIFIED.md  TEST_STATUS.md  TEST_VERIFICATION.md  aauth-test-vectors.json  aauth_validator.py  agentgateway_config.yaml  implement_aauth_jwks_support_35ffe9c1.plan.md  jwt_httpsig_implementation_d3dc21d9.plan.md  reference_outputs.json
api/: resource.pb.go
controller/api/v1alpha1/agentgateway/: agentgateway_policy_types.go  zz_generated.deepcopy.go
controller/hack/utils/oss_compliance/: osa_provided.md
crates/aauth/: Cargo.toml
crates/aauth/src/: errors.rs  lib.rs
crates/aauth/src/digest/: content_digest.rs  mod.rs
crates/aauth/src/encoding/: base64.rs  mod.rs
crates/aauth/src/headers/: mod.rs  signature.rs  signature_input.rs  signature_key.rs
crates/aauth/src/keys/: ed25519.rs  jwk.rs  jwk_thumbprint.rs  mod.rs
crates/aauth/src/signing/: mod.rs  signature_base.rs  signer.rs  verifier.rs
crates/aauth/src/tokens/: agent_token.rs  auth_token.rs  mod.rs  validation.rs
crates/agentgateway/: Cargo.toml  build.rs
crates/agentgateway/proto/: resource.proto
crates/agentgateway/src/: serdes.rs  state_manager.rs
crates/agentgateway/src/cel/: types.rs
crates/core/: build.rs
examples/aauth/: README.md  config.yaml
go/api/: resource.pb.go  resource_json.gen.go
hack/tilt/: .gitignore
schema/: config.json
ui/src/lib/: configMapper.ts
(+23 files in other folders)
