[package]
name = "aauth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tracing = "0.1"
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
thiserror = "2.0"
rand = "0.8"
tokio = { version = "1.48", features = ["rt", "macros"] }

[dev-dependencies]
insta = { workspace = true }
